<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/textProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/editAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/ring_answer_hint" />

    <Button
        android:id="@+id/buttonDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ring_dismiss" />

    <Button
        android:id="@+id/buttonSnooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ring_snooze" />

</LinearLayout>